tdf#149461 qt: Move setting layout to QtObject ctor

Move setting the layout for the QtObjectWidget
from the QtObjectWidget ctor to the QtObject ctor,
in preparation to also use that for QWidgets other
than the QtObjectWidget.

Change-Id: Ifbb0d853659bc8099bed40db2bbe8a8778077aa2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169346
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit 22270a54a2d73f96109ca851b1e1627910213645)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169365